--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>frontend</title>
 </head>
 
-<body style='font-family: "SN Pro", sans-serif;'>
+<body style='font-family: "SN Pro", sans-serif; background-color: #e7e7e7;'>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
